syntax = "proto3";

package potter;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/akriventsev/potter/api/proto/potter";

// Рекомендуемый способ импорта этого файла в ваших proto файлах:
// import "potter/options.proto";
//
// При использовании potter-gen, путь к этому файлу определяется автоматически.
// Для нестандартных установок можно использовать переменную окружения POTTER_PROTO_PATH.
//
// ПРАВИЛЬНО:
// import "potter/options.proto";
//
// НЕПРАВИЛЬНО (не используйте):
// import "github.com/akriventsev/potter/options.proto";
//
// Важно: protoc ищет файлы относительно --proto_path, а не по полному пути модуля Go.
// Potter-gen автоматически настраивает пути для поиска potter/options.proto.

// Potter custom options для аннотации CQRS компонентов

// CommandOptions аннотация для RPC метода, представляющего Command
extend google.protobuf.MethodOptions {
  optional CommandOptions command = 50001;
}

// QueryOptions аннотация для RPC метода, представляющего Query
extend google.protobuf.MethodOptions {
  optional QueryOptions query = 50002;
}

// EventOptions аннотация для message, представляющего Event
extend google.protobuf.MessageOptions {
  optional EventOptions event = 50001;
}

// AggregateOptions аннотация для message, представляющего Aggregate Root
extend google.protobuf.MessageOptions {
  optional AggregateOptions aggregate = 50002;
}

// ValueObjectOptions аннотация для message, представляющего Value Object
extend google.protobuf.MessageOptions {
  optional ValueObjectOptions value_object = 50003;
}

// ErrorEventOptions аннотация для message, представляющего Error Event
extend google.protobuf.MessageOptions {
  optional ErrorEventOptions error_event = 50004;
}

// ServiceOptions аннотация для service с настройками модуля
extend google.protobuf.ServiceOptions {
  optional ServiceOptions service = 50001;
}

// CommandOptions настройки команды
message CommandOptions {
  string aggregate = 1;           // Имя агрегата, на который действует команда
  bool async = 2;                 // Асинхронное выполнение команды
  bool idempotent = 3;             // Идемпотентность команды
  int32 timeout_seconds = 4;      // Таймаут выполнения команды в секундах
  repeated string tags = 5;        // OpenAPI tags для группировки операций
  string summary = 6;              // Краткое описание операции
  string description = 7;          // Полное описание операции
  bool deprecated = 8;             // Пометка операции как deprecated
}

// QueryOptions настройки запроса
message QueryOptions {
  bool cacheable = 1;             // Можно ли кешировать результат
  int32 cache_ttl_seconds = 2;    // TTL кеша в секундах
  string read_model = 3;          // Имя read model для запроса
  repeated string tags = 4;       // OpenAPI tags для группировки операций
  string summary = 5;             // Краткое описание операции
  string description = 6;        // Полное описание операции
  bool deprecated = 7;            // Пометка операции как deprecated
}

// EventOptions настройки события
message EventOptions {
  string event_type = 1;          // Тип события (например, "product.created")
  string aggregate = 2;           // Имя агрегата, который генерирует событие
  int32 version = 3;              // Версия события
}

// AggregateOptions настройки агрегата
message AggregateOptions {
  string name = 1;                // Имя агрегата
  string repository = 2;          // Тип репозитория (postgres, mongodb, inmemory)
}

// ValueObjectOptions настройки value object
message ValueObjectOptions {
  // Пустое сообщение, используется только как маркер
}

// ErrorEventOptions настройки события об ошибке
message ErrorEventOptions {
  string error_code = 1;          // Код ошибки (например, "PRODUCT_CREATION_FAILED")
  bool retryable = 2;             // Можно ли повторить операцию
}

// ServiceOptions настройки сервиса
message ServiceOptions {
  string module_name = 1;        // Имя модуля (используется для генерации путей)
  // Список транспортов (REST, gRPC, GraphQL, NATS, Kafka)
  // Пример: transport: ["REST", "GraphQL"] - генерирует REST и GraphQL адаптеры
  // GraphQL автоматически создает Query, Mutation и Subscription резолверы
  repeated string transport = 2;
  bool enable_openapi = 3;        // Явное включение OpenAPI генерации (опционально, можно определять по наличию "REST" в transport)
  string openapi_version = 4;    // Версия OpenAPI спецификации (по умолчанию "3.0.3")
  OpenAPIInfo openapi_info = 5;  // Метаданные для OpenAPI спецификации
}

// OpenAPIInfo метаданные для OpenAPI спецификации
message OpenAPIInfo {
  string title = 1;              // Название API (по умолчанию из module_name)
  string version = 2;            // Версия API (по умолчанию "1.0.0")
  string description = 3;        // Описание API
  string terms_of_service = 4;   // URL Terms of Service
  OpenAPIContact contact = 5;    // Контактная информация
  OpenAPILicense license = 6;     // Лицензия
}

// OpenAPIContact контактная информация
message OpenAPIContact {
  string name = 1;
  string url = 2;
  string email = 3;
}

// OpenAPILicense лицензия
message OpenAPILicense {
  string name = 1;
  string url = 2;
}

